# Flareformer

./: .flake8  .gitignore  .tmp0.txt  LICENSE  Makefile  README.md  ablation.sh  binsearch.py  data  ema_module.py  engine.py  eval_mae.py  eval_seq_mae.py  eval_sparse.py  example.txt  exp.py  loss.csv  mae_visualize.ipynb  main.py  main_informer.py  main_informer_test.py  memo.md  preprocess.py  pylintrc  pyproject.toml  require.txt  requirements.txt  test_reg.sh  train.py  train.sh  train2vec.py  trainSSL.py  train_mae.py  train_mae.sh  train_reg.sh  train_seq_mae.py  train_sparse.py  train_with_aia.py  view.sh  vis.ipynb
analyze/: ablation.csv  analyze_ablation.py  calc_gmgs.py  calc_pn.py  draw_fig.py  fetch_fig.py
config/: params_2014.json  params_2015.json  params_2016.json  params_2017.json  params_2017_2labels.json  params_2017_replace.json  params_2018.json  params_2018_replace.json  params_2018_replace_weight.json  params_2019_replace.json  params_2019_replace_weight.json  params_2020_replace.json  params_2020_replace_weight.json  params_server.json
datasets/: BalancedBatchSampler.py  datasets.py  flare.py  sampler.py
exp/: exp_basic.py  exp_informer.py  exp_informer_multi.py
mae/: engine_finetune.py  engine_pretrain.py  main_finetune.py  main_linprobe.py  main_pretrain.py  models_mae.py  models_vit.py  submitit_finetune.py  submitit_linprobe.py  submitit_pretrain.py
models/: attn.py  cnn.py  misc.py  model.py
params/: copy.sh  params2014_type.json  paramsN2_2014.json  paramsN2_2015.json  paramsN2_2016.json  paramsN2_2017.json  paramsN3_2014.json  paramsN3_2015.json  paramsN3_2016.json  paramsN3_2017.json  params_2014 (n1d's conflicted copy 2022-03-28).json  params_2014.json  params_2014_1dmae.json  params_2014_2.json  params_2014_2vec.json  params_2014_aia.json  params_2014_bert.json  params_2014_convnext.json  params_2014_exp.json  params_2014_k24.json  params_2014_seq_mae.json  params_2014_seqmae.json  params_2014_vit.json  params_2015.json  params_2016.json  params_2017.json  params_2017_forecast.json  params_2017_img.json  params_2017_k12.json  params_2017_preprocess.json  params_2017_vit.json
preprocess/: datasets.py  main.py  make_forecast_window.py  n-gram.py  parse.py  (+2 more)
(+110 files in other folders)
